--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -156,7 +156,7 @@
 
             <RelativeLayout
                 android:layout_width="wrap_content"
-                android:id="@+id/rl_link"
+                android:id="@+id/rl_project"
                 android:layout_height="wrap_content">
 
                 <ImageView
@@ -180,7 +180,7 @@
                     android:paddingLeft="12dp"
                     android:paddingRight="12dp"
                     android:paddingBottom="2dp"
-                    android:text="收藏网址"
+                    android:text="项目体系"
                     android:textColor="@color/primaryTextColor"
                     android:textSize="@dimen/sp16" />
             </RelativeLayout>
